--- a/config/config.yaml
+++ b/config/config.yaml
@@ -44,3 +44,9 @@ model_evaluation:
 
 
 
+model_trainer:
+  root_dir: artifacts/model_trainer
+  train_data_path: artifacts/data_transformation/train.csv
+  test_data_path: artifacts/data_transformation/test.csv
+  model_name: model.joblib
+  
