--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -88,7 +88,7 @@ jobs:
          
       # - name: Stop and remove container if running
       #   run: |
-      #    docker ps -q --filter "name=mlops2" | grep -q . && docker stop mlproj && docker rm -fv mlproj
+      #    docker ps -q --filter "name=mlops2" | grep -q . && docker stop  mlops2 && docker rm -fv mlproj
        
       - name: Run Docker Image to serve users
         run: |
