--- a/params.yaml
+++ b/params.yaml
@@ -1,3 +1,13 @@
-ElasticNet:
-  alpha: 0.3
-  l1_ratio: 0.1
+# ElasticNet:
+#  alpha: 0.3
+#  l1_ratio: 0.1
+
+XGBoost:
+  n_estimators: 100
+  learning_rate: 0.1
+  max_depth: 3
+  subsample: 0.8
+  colsample_bytree: 0.8
+  gamma: 0
+  reg_alpha: 0
+  reg_lambda: 1
